# Deep-Barcode-Reader

./: .bumpversion.cfg  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
src/deep_barcode_reader/: __init__.py  barcode.py  base.py  logging.py  main.py
tests/: test_deep_barcode_reader.py
